# euros24-prediction

./: README.md  dict_table.json  euros_predictions.ipynb  pyproject.toml
_data/: Euros_fixtures.csv  clean_Euros_fixtures.csv  clean_Euros_matches.csv  dict_table
